--- a/assets/Css/about.css
+++ b/assets/Css/about.css
@@ -1,21 +1,6 @@
-html{
-    height: 100%;
-    width: 100%;
-}
-
-body {
-    background-repeat: repeat;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: 100%;
-	font-family: sans-serif;
-    
-}
 /*add nav bar style from https://codepen.io/MinzCode/pen/bGexzXw*/
 nav {
-    position: fixed;
+	position: fixed;
 	z-index: 10;
 	left: 0;
 	right: 0;
@@ -23,8 +8,8 @@ nav {
 	padding: 0 5%;
 	height: 100px;
 	background-color: rgb(244, 238, 238);
-}
-nav .logo {
+ }
+ nav .logo {
 	float: left;
 	width: 40%;
 	height: 100%;
@@ -33,8 +18,8 @@ nav .logo {
 	font-size: 25px;
 	color: black;
 	font-family: sans-serif;
-}
-nav .links {
+ }
+ nav .links {
 	float: right;
 	padding: 0;
 	margin: 0;
@@ -43,325 +28,309 @@ nav .links {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-}
-
-#active {
+ }
+ 
+ #active {
 	border-bottom: 2px solid #000;
-  }
-
-
-
-nav .links li {
+ }
+ 
+ nav .links li {
 	list-style: none;
-}
-nav .links a {
+ }
+ nav .links a {
 	display: block;
 	padding: 1em;
 	font-size: 18px;
 	color: black;
 	text-decoration: none;
 	font-family: sans-serif;
-}
-
-nav .links a:hover {
+ }
+ 
+ nav .links a:hover {
 	color: rgb(61, 43, 226);
 	font-size: 19px;
-}
-
-.links > li > a:hover {
+ }
+ 
+ .links > li > a:hover {
 	border-bottom-color: #000;
 	border-bottom: 2px solid #000;
-  }
-  
-#nav-toggle {
+ }
+ 
+ #nav-toggle {
 	position: absolute;
 	top: -100px;
-}
-nav .icon-burger {
+ }
+ nav .icon-burger {
 	display: none;
 	position: absolute;
 	right: 6%;
 	top: 50%;
 	transform: translateY(-50%);
-}
-nav .icon-burger .line {
+ }
+ nav .icon-burger .line {
 	width: 30px;
 	height: 6px;
 	background-color: black;
 	margin: 6px;
 	border-radius: 4px;
-	transition: all .4s ease-in-out;
-}
-@media screen and (max-width: 768px) {
+	transition: all 0.4s ease-in-out;
+ }
+ @media screen and (max-width: 768px) {
 	nav .logo {
-		float: none;
-		width: auto;
-		justify-content: center;
+	   float: none;
+	   width: auto;
+	   justify-content: center;
 	}
 	nav .links {
-		float: none;
-		position: fixed;
-		z-index: 9;
-		left: 0;
-		right: 0;
-		top: 100px;
-		bottom: 100%;
-		width: auto;
-		height: auto;
-		flex-direction: column;
-		justify-content: space-evenly;
-		background-color: grey;
-		overflow: hidden;
-		box-sizing: border-box;
-		transition: all .4s ease-in-out;
+	   float: none;
+	   position: fixed;
+	   z-index: 9;
+	   left: 0;
+	   right: 0;
+	   top: 100px;
+	   bottom: 100%;
+	   width: auto;
+	   height: auto;
+	   flex-direction: column;
+	   justify-content: space-evenly;
+	   background-color: grey;
+	   overflow: hidden;
+	   box-sizing: border-box;
+	   transition: all 0.4s ease-in-out;
 	}
 	nav .links a {
-		font-size: 24px;
+	   font-size: 24px;
 	}
 	nav :checked ~ .links {
-		bottom: 0;
+	   bottom: 0;
 	}
 	nav .icon-burger {
-		display: block;
+	   display: block;
 	}
 	nav :checked ~ .icon-burger .line:nth-child(1) {
-		transform: translateY(10px) rotate(225deg);
+	   transform: translateY(10px) rotate(225deg);
 	}
 	nav :checked ~ .icon-burger .line:nth-child(3) {
-		transform: translateY(-10px) rotate(-225deg);
+	   transform: translateY(-10px) rotate(-225deg);
 	}
 	nav :checked ~ .icon-burger .line:nth-child(2) {
-		opacity: 0;
+	   opacity: 0;
 	}
-	
-}
-
-
-@media screen and (max-width: 268px){
+ }
+ 
+ @media screen and (max-width: 268px) {
 	.fa-rocket {
-		display: none;
-		visibility: hidden;
+	   display: none;
+	   visibility: hidden;
 	}
-}
-/*Navbar Ends*/
-/*---------------------------------------------------------------------------------style for footer*/
-footer{
-    height: 10px;
-    background-color: rgb(248, 221, 221);
-        bottom: 0;
-        width: 100%;
-        margin-bottom: 0%;
-        padding:27px;
-        text-align: center;
-        align-items: center;
-        word-spacing: 40px;
-		font-family: sans-serif;
-    
-    }
-    
-    ul li {
-        display: inline;
-        text-align: center;
-        font-size: 150%;
-        color:rgb(244, 238, 238);
-		font-family: sans-serif;
-    }
-    
-    
-    /*looked at codepen to help with css social media icons https://codepen.io/vishalamipara/pen/ZEYZVvr*/
-    
-    .social-icons a{
-        color: rgb(244, 240, 240);
-        line-height: 28px;
-        font-size: 28px;
-        margin: 0 5px;
-        text-decoration: none;
-		font-family: sans-serif;
-    }
-    .social-icons a i{
-        line-height: 28px;
-        font-size: 28px;
-    
-    }
-    
-
-
-
-/*Footer ENds*/
-
-/*About us section*/
-	.section{
-		width: 100%;
-		min-height: 90vh;
-		background-color: #ddd;
-		margin-top: 150px;
-		border-radius: 30px;
-		font-family: sans-serif;
-	}
-	.container{
-		width: 80%;
-		display: block;
-		margin:auto;
-		padding-top: 100px;
-		margin-top: 70px;
-	}
-
-
-	.about-heading{
-		font-size: 35px;
-		font-family: sans-serif;
-	}
-
-	.content-section{
-		float: left;
-		width: 55%;
-	}
-	.image-section{
-		float: right;
-		width: 40%;
-		margin-top: 70px;
-	}
-	.image-section img{
-		width: 100%;
-		height: auto;
-		border-radius: 35px;
-		border-radius: 30px;
-  		box-shadow: 2px 2px 40px rgb(53, 51, 51);
-	}
-	.content-section .title{
-		text-transform: uppercase;
-		font-size: 28px;
-		font-family: sans-serif;
-	}
-	.content-section .content h3{
-		margin-top: 20px;
-		color:#5d5d5d;
-		font-size: 21px;
-		font-family: sans-serif;
-	}
-	.content-section .content p{
-		margin-top: 10px;
-		font-family: sans-serif;
-		font-size: 18px;
-		line-height: 1.5;
-		font-family: sans-serif;
-	}
-	.content-section .content .button{
-		margin-top: 30px;
-		font-family: sans-serif;
-	}
-
-.button a {
+ }
+ /*Navbar Ends*/
+ /*---------------------------------------------------------------------------------style for footer*/
+ footer {
+	height: 10px;
+	background-color: rgb(248, 221, 221);
+	bottom: 0;
+	width: 100%;
+	margin-bottom: 0%;
+	padding: 27px;
+	text-align: center;
+	align-items: center;
+	word-spacing: 40px;
+	font-family: sans-serif;
+ }
+ 
+ ul li {
+	display: inline;
+	text-align: center;
+	font-size: 150%;
+	color: rgb(244, 238, 238);
+	font-family: sans-serif;
+ }
+ 
+ /*looked at codepen to help with css social media icons https://codepen.io/vishalamipara/pen/ZEYZVvr*/
+ 
+ .social-icons a {
+	color: rgb(244, 240, 240);
+	line-height: 28px;
+	font-size: 28px;
+	margin: 0 5px;
+	text-decoration: none;
+	font-family: sans-serif;
+ }
+ .social-icons a i {
+	line-height: 28px;
+	font-size: 28px;
+ }
+ 
+ /*Footer ENds*/
+ 
+ /*About us section*/
+ .section {
+	width: 100%;
+	min-height: 90vh;
+	background-color: #ddd;
+	margin-top: 150px;
+	border-radius: 30px;
+	font-family: sans-serif;
+ }
+ .container {
+	width: 80%;
+	display: block;
+	margin: auto;
+	padding-top: 100px;
+	margin-top: 70px;
+ }
+ 
+ .about-heading {
+	font-size: 35px;
+	font-family: sans-serif;
+ }
+ 
+ .content-section {
+	float: left;
+	width: 55%;
+ }
+ .image-section {
+	float: right;
+	width: 40%;
+	margin-top: 70px;
+ }
+ .image-section img {
+	width: 100%;
+	height: auto;
+	border-radius: 35px;
+	border-radius: 30px;
+	box-shadow: 2px 2px 40px rgb(53, 51, 51);
+ }
+ .content-section .title {
+	text-transform: uppercase;
+	font-size: 28px;
+	font-family: sans-serif;
+ }
+ .content-section .content h3 {
+	margin-top: 20px;
+	color: #5d5d5d;
+	font-size: 21px;
+	font-family: sans-serif;
+ }
+ .content-section .content p {
+	margin-top: 10px;
+	font-family: sans-serif;
+	font-size: 18px;
+	line-height: 1.5;
+	font-family: sans-serif;
+ }
+ .content-section .content .button {
+	margin-top: 30px;
+	font-family: sans-serif;
+ }
+ 
+ .button a {
 	border-radius: 15px;
-}
-
-	.content-section .content .button a{
-		background-color: rgb(177, 174, 174);
-		padding:12px 40px;
-		text-decoration: none;
-		color: black;
-		font-size: 15px;
-		letter-spacing: 1.5px;
+ }
+ 
+ .content-section .content .button a {
+	background-color: rgb(177, 174, 174);
+	padding: 12px 40px;
+	text-decoration: none;
+	color: black;
+	font-size: 15px;
+	letter-spacing: 1.5px;
+ }
+ .content-section .content .button a:hover {
+	background-color: rgb(61, 43, 226);
+	color: black;
+ }
+ .content-section .social {
+	margin: 40px 40px;
+ }
+ .content-section .social i {
+	font-size: 30px;
+	padding: 0px 10px;
+ }
+ .content-section .social i:hover {
+	color: #463f3f;
+ }
+ @media screen and (max-width: 768px) {
+	.container {
+	   width: 80%;
+	   display: block;
+	   margin: auto;
+	   padding-top: 50px;
 	}
-	.content-section .content .button a:hover{
-		background-color: rgb(61, 43, 226);
-		color:black
+	.content-section {
+	   float: none;
+	   width: 100%;
+	   display: block;
+	   margin: auto;
 	}
-	.content-section .social{
-		margin: 40px 40px;
+	.image-section {
+	   float: none;
+	   width: 100%;
 	}
-	.content-section .social i{
-		font-size: 30px;
-		padding:0px 10px;
+	.image-section img {
+	   width: 100%;
+	   height: auto;
+	   display: block;
+	   margin: auto;
+	   border-radius: 15px;
 	}
-	.content-section .social i:hover{
-		color:#463f3f;
+ 
+	.content-section .title {
+	   text-align: center;
+	   font-size: 19px;
 	}
-	@media screen and (max-width: 768px){
-		.container{
-		width: 80%;
-		display: block;
-		margin:auto;
-		padding-top:50px;
+	.content-section .content .button {
+	   text-align: center;
 	}
-	.content-section{
-		float:none;
-		width:100%;
-		display: block;
-		margin:auto;
+	.content-section .content .button a {
+	   padding: 9px 30px;
 	}
-	.image-section{
-		float:none;
-		width:100%;
+	.content-section .social {
+	   text-align: center;
 	}
-	.image-section img{
-		width: 100%;
-		height: auto;
-		display: block;
-		margin:auto;
-		border-radius: 15px;
-		
-	}
-
-	.content-section .title{
-		text-align: center;
-		font-size: 19px;
-	}
-	.content-section .content .button{
-		text-align: center;
-	}
-	.content-section .content .button a{
-		padding:9px 30px;
-	}
-	.content-section .social{
-		text-align: center;
-	}
-	
-	}
-
-
-
-	.fa-facebook-square{
-		color: blue;
-		
-	}
-	
-	.fa-facebook-square:hover{
-		font-size: 35px;
-		color: black;
-	}
-	
-	.fa-youtube-square{
-		color: red;
-	}
-	
-	.fa-youtube-square:hover{
-		font-size: 35px;
-		color: black;
-	}
-	
-	.fa-twitter-square{
-		color: rgb(0, 234, 255);
-	}
-	
-	.fa-twitter-square:hover{
-		font-size: 35px;
-		color: black;
-	}
-	.fa-instagram{
-		color: purple;
-	}
-	
-	.fa-instagram:hover{
-		font-size: 35px;
-		color: black;
-	}
-	
-	.fa-pinterest-p{
-		color: green;
-	}
-	
-	.fa-pinterest-p:hover{
-		font-size: 35px;
-		color: black;
-	}
+ }
+ 
+ .fa-facebook-square {
+	color: blue;
+ }
+ 
+ .fa-facebook-square:hover {
+	font-size: 35px;
+	color: black;
+ }
+ 
+ .fa-youtube-square {
+	color: red;
+ }
+ 
+ .fa-youtube-square:hover {
+	font-size: 35px;
+	color: black;
+ }
+ 
+ .fa-twitter-square {
+	color: rgb(0, 234, 255);
+ }
+ 
+ .fa-twitter-square:hover {
+	font-size: 35px;
+	color: black;
+ }
+ .fa-instagram {
+	color: purple;
+ }
+ 
+ .fa-instagram:hover {
+	font-size: 35px;
+	color: black;
+ }
+ 
+ .fa-pinterest-p {
+	color: green;
+ }
+ 
+ .fa-pinterest-p:hover {
+	font-size: 35px;
+	color: black;
+ }
