--- a/assets/Css/contact.css
+++ b/assets/Css/contact.css
@@ -1,311 +1,297 @@
-html{
-    height: 100%;
-    width: 100%;
+html {
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    background-image: url("../images/pexels-pixabay-220201.jpg");
-    background-repeat: repeat;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: 100%;
-    font-family: sans-serif;
+  background-image: url("../images/pexels-pixabay-220201.jpg");
+  background-repeat: repeat;
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%;
+  font-family: sans-serif;
 }
 /*add nav bar style from https://codepen.io/MinzCode/pen/bGexzXw*/
 nav {
-    position: fixed;
-	z-index: 10;
-	left: 0;
-	right: 0;
-	top: 0;
-	
-	padding: 0 5%;
-	height: 100px;
-	background-color: rgb(244, 238, 238);
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  right: 0;
+  top: 0;
+
+  padding: 0 5%;
+  height: 100px;
+  background-color: rgb(244, 238, 238);
 }
 nav .logo {
-	float: left;
-	width: 40%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	font-size: 25px;
-	color: black;
+  float: left;
+  width: 40%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 25px;
+  color: black;
 }
 nav .links {
-	float: right;
-	padding: 0;
-	margin: 0;
-	width: 60%;
-	height: 100%;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
+  float: right;
+  padding: 0;
+  margin: 0;
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-
 
 #active {
-	border-bottom: 2px solid #000;
-  }
+  border-bottom: 2px solid #000;
+}
 
 nav .links li {
-	list-style: none;
+  list-style: none;
 }
 nav .links a {
-	display: block;
-	padding: 1em;
-	font-size: 18px;
-	color: black;
-	text-decoration: none;
+  display: block;
+  padding: 1em;
+  font-size: 18px;
+  color: black;
+  text-decoration: none;
 }
 
 nav .links a:hover {
-	color: rgb(61, 43, 226);
-	font-size: 19px;
+  color: rgb(61, 43, 226);
+  font-size: 19px;
 }
 
 .links > li > a:hover {
-	border-bottom-color: #000;
-	border-bottom: 2px solid #000;
-  }
-  
-#nav-toggle {
-	position: absolute;
-	top: -100px;
-}
-nav .icon-burger {
-	display: none;
-	position: absolute;
-	right: 6%;
-	top: 50%;
-	transform: translateY(-50%);
-}
-nav .icon-burger .line {
-	width: 30px;
-	height: 6px;
-	background-color: black;
-	margin: 6px;
-	border-radius: 4px;
-	transition: all .4s ease-in-out;
-}
-@media screen and (max-width: 768px) {
-	nav .logo {
-		float: none;
-		width: auto;
-		justify-content: center;
-	}
-	nav .links {
-		float: none;
-		position: fixed;
-		z-index: 9;
-		left: 0;
-		right: 0;
-		top: 100px;
-		bottom: 100%;
-		width: auto;
-		height: auto;
-		flex-direction: column;
-		justify-content: space-evenly;
-		background-color: grey;
-		overflow: hidden;
-		box-sizing: border-box;
-		transition: all .4s ease-in-out;
-	}
-	nav .links a {
-		font-size: 24px;
-	}
-	nav :checked ~ .links {
-		bottom: 0;
-	}
-	nav .icon-burger {
-		display: block;
-	}
-	nav :checked ~ .icon-burger .line:nth-child(1) {
-		transform: translateY(10px) rotate(225deg);
-	}
-	nav :checked ~ .icon-burger .line:nth-child(3) {
-		transform: translateY(-10px) rotate(-225deg);
-	}
-	nav :checked ~ .icon-burger .line:nth-child(2) {
-		opacity: 0;
-	}
-	
+  border-bottom-color: #000;
+  border-bottom: 2px solid #000;
 }
 
-@media screen and (max-width: 268px){
-	.fa-rocket {
-		display: none;
-		visibility: hidden;
-	}
+#nav-toggle {
+  position: absolute;
+  top: -100px;
+}
+nav .icon-burger {
+  display: none;
+  position: absolute;
+  right: 6%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+nav .icon-burger .line {
+  width: 30px;
+  height: 6px;
+  background-color: black;
+  margin: 6px;
+  border-radius: 4px;
+  transition: all 0.4s ease-in-out;
+}
+@media screen and (max-width: 768px) {
+  nav .logo {
+     float: none;
+     width: auto;
+     justify-content: center;
+  }
+  nav .links {
+     float: none;
+     position: fixed;
+     z-index: 9;
+     left: 0;
+     right: 0;
+     top: 100px;
+     bottom: 100%;
+     width: auto;
+     height: auto;
+     flex-direction: column;
+     justify-content: space-evenly;
+     background-color: grey;
+     overflow: hidden;
+     box-sizing: border-box;
+     transition: all 0.4s ease-in-out;
+  }
+  nav .links a {
+     font-size: 24px;
+  }
+  nav :checked ~ .links {
+     bottom: 0;
+  }
+  nav .icon-burger {
+     display: block;
+  }
+  nav :checked ~ .icon-burger .line:nth-child(1) {
+     transform: translateY(10px) rotate(225deg);
+  }
+  nav :checked ~ .icon-burger .line:nth-child(3) {
+     transform: translateY(-10px) rotate(-225deg);
+  }
+  nav :checked ~ .icon-burger .line:nth-child(2) {
+     opacity: 0;
+  }
+}
+
+@media screen and (max-width: 268px) {
+  .fa-rocket {
+     display: none;
+     visibility: hidden;
+  }
 }
 
 /*Start of form for contact form---------------------------------------------------------------------*/
 
-
-
-
-.form-header{
-text-align: center;
-color:#fff;
-font-size: 30px;
-margin-top: 150px;
-
+.form-header {
+  text-align: center;
+  color: #fff;
+  font-size: 30px;
+  margin-top: 150px;
 }
 
 .form-header-h2 {
-text-align: center;
-color:#fff;
-font-size: 20px;
+  text-align: center;
+  color: #fff;
+  font-size: 20px;
 }
 
-
-.form-divider{
-    background-color:#fff;
-    border: 1px #fff;
-    width: 33%;
-    height: 5px;
+.form-divider {
+  background-color: #fff;
+  border: 1px #fff;
+  width: 33%;
+  height: 5px;
 }
 
 * {
-    box-sizing: border-box;
-  }
-  
-  input[type=text], select, textarea {
-    width: 100%;
-    padding: 10px;
-    border: 2px solid rgb(111, 111, 111);
-    border-radius: 5px;
-    resize: vertical;
-  }
+  box-sizing: border-box;
+}
 
-  input:hover {    
-    background-color: rgb(226, 173, 16);
-    transition: 0s;
-    color: #fff;
-  }
- 
-  
-  input[type=submit] {
-    background-color: #17e19e;
-    color: rgb(12, 11, 11);
-    padding: 13px 20px;
-    border: 1px #fff;
-    border-radius: 5px;
-    float: right;
-  }
-  
-  input[type=submit]:hover {
-    background-color: rgb(226, 173, 16);
-  }
-  
-  .container {
-    border-radius: 6px;
-    background-color:  transparent;
-    padding: 21px;
-    margin-top: 105px;
-    width: 60%;
-    align-content: center;
-    margin-left: 15%;
-    margin-right: 15%;
-    
-  }
-  
-  .col-25 {
-    float: left;
-    width: 25%;
-    margin-top: 5px;
-  }
-  
-  .col-75 {
-    float: left;
-    width: 75%;
-    margin-top: 7px;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 2px solid rgb(111, 111, 111);
+  border-radius: 5px;
+  resize: vertical;
+}
 
+input:hover {
+  background-color: rgb(226, 173, 16);
+  transition: 0s;
+  color: #fff;
+}
 
+input[type="submit"] {
+  background-color: #17e19e;
+  color: rgb(12, 11, 11);
+  padding: 13px 20px;
+  border: 1px #fff;
+  border-radius: 5px;
+  float: right;
+}
 
-  
-  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .col-25, .col-75, input[type=submit] {
-      width: 100%;
-      margin-top: 0;
-    }
+input[type="submit"]:hover {
+  background-color: rgb(226, 173, 16);
+}
+
+.container {
+  border-radius: 6px;
+  background-color: transparent;
+  padding: 21px;
+  margin-top: 105px;
+  width: 60%;
+  align-content: center;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 5px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 7px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25,
+  .col-75,
+  input[type="submit"] {
+     width: 100%;
+     margin-top: 0;
   }
+}
 /*---------------------------------------------------------------------------------style for footer*/
-footer{
-        height: 10px;
-        background-color: rgb(222, 219, 219);
-        bottom: 0;
-        width: 100%;
-        margin-bottom: 0%;
-        padding:32px;
-        text-align: center;
-        align-items: center;
-        word-spacing: 40px;
-        margin-top: 150px;
-    
-    }
-    
-    ul li {
-        display: inline;
-        text-align: center;
-        font-size: 150%;
-        color:rgb(244, 238, 238);
-    }
-    
-    
-    /*looked at codepen to help with css social media icons https://codepen.io/vishalamipara/pen/ZEYZVvr*/
-    
-    .social-icons a{
-        color: rgb(244, 240, 240);
-        line-height: 28px;
-        font-size: 28px;
-        margin: 0 5px;
-        text-decoration: none;
-    }
-    .social-icons a i{
-        line-height: 28px;
-        font-size: 28px;
-    
-    }
-    
-    /*used their scales for webkit transition etc*/
-    
-    
-    .fa-facebook-square{
-        color: blue;
-        
-    }
-    
-    .fa-facebook-square:hover{
-        font-size: 35px;
-        color: black;
-    }
-    
-    .fa-twitter-square{
-        color: rgb(0, 234, 255);
-    }
-    
-    .fa-twitter-square:hover{
-        font-size: 35px;
-        color: black;
-    }
-    .fa-instagram{
-        color: purple;
-    }
-    
-    .fa-instagram:hover{
-        font-size: 35px;
-        color: black;
-    }
-    
+footer {
+  height: 10px;
+  background-color: rgb(222, 219, 219);
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 0%;
+  padding: 32px;
+  text-align: center;
+  align-items: center;
+  word-spacing: 40px;
+  margin-top: 150px;
+}
+
+ul li {
+  display: inline;
+  text-align: center;
+  font-size: 150%;
+  color: rgb(244, 238, 238);
+}
+
+/*looked at codepen to help with css social media icons https://codepen.io/vishalamipara/pen/ZEYZVvr*/
+
+.social-icons a {
+  color: rgb(244, 240, 240);
+  line-height: 28px;
+  font-size: 28px;
+  margin: 0 5px;
+  text-decoration: none;
+}
+.social-icons a i {
+  line-height: 28px;
+  font-size: 28px;
+}
+
+/*used their scales for webkit transition etc*/
+
+.fa-facebook-square {
+  color: blue;
+}
+
+.fa-facebook-square:hover {
+  font-size: 35px;
+  color: black;
+}
+
+.fa-twitter-square {
+  color: rgb(0, 234, 255);
+}
+
+.fa-twitter-square:hover {
+  font-size: 35px;
+  color: black;
+}
+.fa-instagram {
+  color: purple;
+}
+
+.fa-instagram:hover {
+  font-size: 35px;
+  color: black;
+}
