--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -1,22 +1,21 @@
-html{
-    height: 100%;
-    width: 100%;
-}
-
-body {
-    background-image: url("../images/rick-and-morty-background-jurokoo-deviantart-19.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: auto;
+html {
+	height: 100%;
+	width: 100%;
+ }
+ 
+ body {
+	background-image: url("../images/rick-and-morty-background-jurokoo-deviantart-19.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: auto;
 	font-family: sans-serif;
-	
-}
-/*add nav bar style from https://codepen.io/MinzCode/pen/bGexzXw*/
-nav {
-    position: fixed;
+ }
+ /*add nav bar style from https://codepen.io/MinzCode/pen/bGexzXw*/
+ nav {
+	position: fixed;
 	z-index: 10;
 	left: 0;
 	right: 0;
@@ -24,8 +23,8 @@ nav {
 	padding: 0 5%;
 	height: 100px;
 	background-color: rgb(244, 238, 238);
-}
-nav .logo {
+ }
+ nav .logo {
 	float: left;
 	width: 40%;
 	height: 100%;
@@ -33,8 +32,8 @@ nav .logo {
 	align-items: center;
 	font-size: 25px;
 	color: black;
-}
-nav .links {
+ }
+ nav .links {
 	float: right;
 	padding: 0;
 	margin: 0;
@@ -43,377 +42,349 @@ nav .links {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-}
-
-
-#active {
+ }
+ 
+ #active {
 	border-bottom: 2px solid #000;
-  }
-
-nav .links li {
+ }
+ 
+ nav .links li {
 	list-style: none;
-}
-nav .links a {
+ }
+ nav .links a {
 	display: block;
 	padding: 1em;
 	font-size: 18px;
 	color: black;
 	text-decoration: none;
-}
-
-nav .links a:hover {
+ }
+ 
+ nav .links a:hover {
 	color: rgb(61, 43, 226);
 	font-size: 19px;
-}
-
-.links > li > a:hover {
+ }
+ 
+ .links > li > a:hover {
 	border-bottom-color: #000;
 	border-bottom: 2px solid #000;
-  }
-
-#nav-toggle {
+ }
+ 
+ #nav-toggle {
 	position: absolute;
 	top: -100px;
-}
-nav .icon-burger {
+ }
+ nav .icon-burger {
 	display: none;
 	position: absolute;
 	right: 6%;
 	top: 50%;
 	transform: translateY(-50%);
-}
-nav .icon-burger .line {
+ }
+ nav .icon-burger .line {
 	width: 30px;
 	height: 6px;
 	background-color: black;
 	margin: 6px;
 	border-radius: 4px;
-	transition: all .4s ease-in-out;
-}
-@media screen and (max-width: 768px) {
+	transition: all 0.4s ease-in-out;
+ }
+ @media screen and (max-width: 768px) {
 	nav .logo {
-		float: none;
-		width: auto;
-		justify-content: center;
+	   float: none;
+	   width: auto;
+	   justify-content: center;
 	}
 	nav .links {
-		float: none;
-		position: fixed;
-		z-index: 9;
-		left: 0;
-		right: 0;
-		top: 100px;
-		bottom: 100%;
-		width: auto;
-		height: auto;
-		flex-direction: column;
-		justify-content: space-evenly;
-		background-color: grey;
-		overflow: hidden;
-		box-sizing: border-box;
-		transition: all .4s ease-in-out;
+	   float: none;
+	   position: fixed;
+	   z-index: 9;
+	   left: 0;
+	   right: 0;
+	   top: 100px;
+	   bottom: 100%;
+	   width: auto;
+	   height: auto;
+	   flex-direction: column;
+	   justify-content: space-evenly;
+	   background-color: grey;
+	   overflow: hidden;
+	   box-sizing: border-box;
+	   transition: all 0.4s ease-in-out;
 	}
 	nav .links a {
-		font-size: 24px;
+	   font-size: 24px;
 	}
 	nav :checked ~ .links {
-		bottom: 0;
+	   bottom: 0;
 	}
 	nav .icon-burger {
-		display: block;
+	   display: block;
 	}
 	nav :checked ~ .icon-burger .line:nth-child(1) {
-		transform: translateY(10px) rotate(225deg);
+	   transform: translateY(10px) rotate(225deg);
 	}
 	nav :checked ~ .icon-burger .line:nth-child(3) {
-		transform: translateY(-10px) rotate(-225deg);
+	   transform: translateY(-10px) rotate(-225deg);
 	}
 	nav :checked ~ .icon-burger .line:nth-child(2) {
-		opacity: 0;
+	   opacity: 0;
 	}
-	
-}
-
-@media screen and (max-width: 268px){
+ }
+ 
+ @media screen and (max-width: 268px) {
 	.fa-rocket {
-		display: none;
-		visibility: hidden;
+	   display: none;
+	   visibility: hidden;
 	}
-}
-
-
-/*Navbar-Ends*/
-
-.cards-heading{
+ }
+ 
+ /*Navbar-Ends*/
+ 
+ .cards-heading {
 	text-align: center;
 	color: black;
 	font-size: 26px;
 	margin-top: 10px;
-}
-
-.cards-divider{
+ }
+ 
+ .cards-divider {
 	width: 25%;
 	background-color: #000;
 	height: 6px;
 	border-radius: 20px;
 	margin-bottom: 30px;
-}
-
-.cards-buttons {
+ }
+ 
+ .cards-buttons {
 	background-color: rgb(160, 156, 156);
 	color: #000;
 	font-size: 14px;
 	border-radius: 5px;
-}
-
-.cards-buttons:hover {
+ }
+ 
+ .cards-buttons:hover {
 	background-color: rgb(61, 43, 226);
 	color: #000;
 	font-size: 15.5px;
-}
-
-
-.container {
+ }
+ 
+ .container {
 	display: flex;
 	width: 900px;
 	height: auto;
 	margin: 0px auto;
 	margin-bottom: 31px;
 	border: none;
-}
-
-.box{
+ }
+ 
+ .box {
 	width: 31%;
 	height: auto;
 	margin-right: 1%;
-    background: white;
+	background: white;
 	border-radius: 10px;
 	transition: 0.8;
-	
-}
-
-.box-hover{
+ }
+ 
+ .box-hover {
 	box-shadow: 0 0 10px rgba(40, 39, 39, 0.5);
 	cursor: pointer;
-}
-img{
+ }
+ img {
 	width: 100%;
 	border-radius: 20px;
-
-}
-
-.container-headings{
+ }
+ 
+ .container-headings {
 	text-align: center;
 	font-size: 25px;
 	color: rgb(27, 27, 27);
 	background-color: white;
-}
-.container-text{
+ }
+ .container-text {
 	text-align: center;
 	background-color: white;
 	font-size: 15px;
-
-}
-
-
-@media (max-width: 800px){
-	.container{
-		width: 84%;
-		display: block;
+ }
+ 
+ @media (max-width: 800px) {
+	.container {
+	   width: 84%;
+	   display: block;
 	}
-	.box{
-		width: 100%;
-		margin-bottom: 4.5%;
-
-		
+	.box {
+	   width: 100%;
+	   margin-bottom: 4.5%;
 	}
-	
-}
-/*hero image rick and morty image from free images online, reusing image button and ufo png i used on power cosmic website i was making information learned from code institute w3 schools you tube tutorials*/
-.hero-image {
-    
-    height: 750px;
-    width: 100%;
-    margin-top: 10px;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: center;
-    font-size: 29px;
-    border-radius: 15px;
-    background-size: cover;
-}
-.hero-button {
-    font-size: 17px;
-    border-radius: 17px;
-    background-color: rgb(243, 245, 247);
-    color: black;
-    text-decoration: none;
-    border-bottom: none;
-    
-}
-
-.hero-button a {
+ }
+ /*hero image rick and morty image from free images online, reusing image button and ufo png i used on power cosmic website i was making information learned from code institute w3 schools you tube tutorials*/
+ .hero-image {
+	height: 750px;
+	width: 100%;
+	margin-top: 10px;
+	background-position: center;
+	background-repeat: no-repeat;
+	position: center;
+	font-size: 29px;
+	border-radius: 15px;
+	background-size: cover;
+ }
+ .hero-button {
+	font-size: 17px;
+	border-radius: 17px;
+	background-color: rgb(243, 245, 247);
 	color: black;
 	text-decoration: none;
 	border-bottom: none;
-
-}
-
-.hero-button:hover{
+ }
+ 
+ .hero-button a {
+	color: black;
+	text-decoration: none;
+	border-bottom: none;
+ }
+ 
+ .hero-button:hover {
 	background-color: rgb(61, 43, 226);
 	color: rgb(235, 221, 221);
 	text-decoration: none;
 	border-bottom: none;
 	font-size: 18px;
-
-}
-
-.hero-link {
-    text-decoration: none;
-    
-}
-.hero-text {
-    text-align: center;
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-}
-.information h2  {
-    text-align: center;
-    flex-wrap: wrap;
-}
-.details {
-    width: 50%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    
-    float: left;
-      
-}
-
-.hero-small-text{
+ }
+ 
+ .hero-link {
+	text-decoration: none;
+ }
+ .hero-text {
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+ }
+ .information h2 {
+	text-align: center;
+	flex-wrap: wrap;
+ }
+ .details {
+	width: 50%;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+ 
+	float: left;
+ }
+ 
+ .hero-small-text {
 	color: white;
 	font-size: 25px;
 	padding: 0 5px;
-
-}
-
-.ufo img {
-    width: 50px;
-    animation: ufo 6s linear infinite;
-
-}
-.ufo img {
-    width: 11%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: absolute;
-    bottom: 0;
-}
-@keyframes ufo {
-    0%{
-        transform: translateY(0);
-        opacity: 0;
-    }
-    50%{
-        
-        opacity: 1;
-}
-    70%{
-    
-    opacity: 1;
-}
-    100%{
-    transform: translateY(-80vh);
-    opacity: 0;
-}
-}
-.ufo img:nth-child(1){
-    animation-delay: 1s;
-}
-/*---------------------------------------------------------------------------------style for footer*/
-footer{
-height: 10px;
-background-color: rgb(222, 219, 219);
+ }
+ 
+ .ufo img {
+	width: 50px;
+	animation: ufo 6s linear infinite;
+ }
+ .ufo img {
+	width: 11%;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	position: absolute;
+	bottom: 0;
+ }
+ @keyframes ufo {
+	0% {
+	   transform: translateY(0);
+	   opacity: 0;
+	}
+	50% {
+	   opacity: 1;
+	}
+	70% {
+	   opacity: 1;
+	}
+	100% {
+	   transform: translateY(-80vh);
+	   opacity: 0;
+	}
+ }
+ .ufo img:nth-child(1) {
+	animation-delay: 1s;
+ }
+ /*---------------------------------------------------------------------------------style for footer*/
+ footer {
+	height: 10px;
+	background-color: rgb(222, 219, 219);
 	bottom: 0;
 	width: 100%;
 	margin-bottom: 0%;
-	padding:28px;
+	padding: 28px;
 	text-align: center;
 	align-items: center;
 	word-spacing: 30px;
-
-}
-
-ul li {
-    display: inline;
-    text-align: center;
-    font-size: 150%;
-    color:rgb(244, 238, 238);
-}
-
-
-/*looked at codepen to help with css social media icons https://codepen.io/vishalamipara/pen/ZEYZVvr*/
-
-.social-icons a{
+ }
+ 
+ ul li {
+	display: inline;
+	text-align: center;
+	font-size: 150%;
+	color: rgb(244, 238, 238);
+ }
+ 
+ /*looked at codepen to help with css social media icons https://codepen.io/vishalamipara/pen/ZEYZVvr*/
+ 
+ .social-icons a {
 	color: rgb(244, 240, 240);
 	line-height: 28px;
 	font-size: 28px;
 	margin: 0 5px;
 	text-decoration: none;
-}
-.social-icons a i{
+ }
+ .social-icons a i {
 	line-height: 28px;
 	font-size: 28px;
-
-}
-
-
-
-@media screen and (max-width: 427px) {
+ }
+ 
+ @media screen and (max-width: 427px) {
 	.social-icons {
-		height: 10px;
-		background-color: rgb(222, 219, 219);
-		bottom: 0;
-		width: 100%;
-		margin-bottom: 0%;
-		padding: 28px;
-		text-align: center;
-		align-items: center;
-		/* word-spacing: 40px; */
+	   height: 10px;
+	   background-color: rgb(222, 219, 219);
+	   bottom: 0;
+	   width: 100%;
+	   margin-bottom: 0%;
+	   padding: 28px;
+	   text-align: center;
+	   align-items: center;
+	   /* word-spacing: 40px; */
 	}
-}
-
-/*used their scales for webkit transition etc*/
-
-
-.fa-facebook-square{
+ }
+ 
+ /*used their scales for webkit transition etc*/
+ 
+ .fa-facebook-square {
 	color: blue;
-	
-}
-
-.fa-facebook-square:hover{
+ }
+ 
+ .fa-facebook-square:hover {
 	font-size: 35px;
 	color: black;
-}
-
-.fa-twitter-square{
+ }
+ 
+ .fa-twitter-square {
 	color: rgb(0, 234, 255);
-}
-
-.fa-twitter-square:hover{
+ }
+ 
+ .fa-twitter-square:hover {
 	font-size: 35px;
 	color: black;
-}
-.fa-instagram{
+ }
+ .fa-instagram {
 	color: purple;
-}
-
-.fa-instagram:hover{
+ }
+ 
+ .fa-instagram:hover {
 	font-size: 35px;
 	color: black;
-}
+ }
